--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="bottom">
-            
+                <p>Contact Me</p>
                 <form action="#">
                     Name:<input type="text" class="format"><br>
                     Email: <input type="email" class="format"><br>
